# fujisan

./: .gitignore  ATARI800_OPTIONS.md  ATARI800_OPTIONS_UPDATED.md  Atari800PRs.md  BUILD.md  BUILD_INSTRUCTIONS.md  BUILD_PLATFORMS.md  CLAUDE.md  CMakeCache.txt  CMakeLists.txt  DEBUGGER_STEPPING_FIX.md  DEVELOPMENT_NOTES.md  FUJISAN_BUILD_CHECKLIST.md  Fujisan.icns  Info.plist.in  LICENSE  Linux-arm.md  Makefile  README.md  RELEASE_NOTES.md  RELEASE_NOTES_1.0.1.md  SETTINGS_AUDIT_REPORT.md  SETUP.md  TCP_SERVER_API.md  TODO_XEP80.md  WINDOWS_BUILD.md  WINDOWS_BUILD_KNOWLEDGE_TRANSFER.md  XEP80_STATUS.md  build.sh  build.sh.backup  cmake_install.cmake  complete_test.json  create-windows-release-simple.sh  create-windows-release-with-audio.sh  enable_basic.json  interlaced.pcx  list_command.json  longer_test.sh  my_screenshot.pcx  package-lock.json  (+16 more)
.claude/agents/: build-error-fixer.md
.github/: RELEASE_INSTRUCTIONS.md
.github/workflows/: README.md  build-linux.yml  build-linux.yml.disabled  build-windows.yml  create-release-simple.yml  create-release.yml  test.yml
a800patches/: README.md  apply-patches.sh  disk-activity-api.patch  libatari800-header.patch
a800patches/examples/: disk-activity-demo.c
a800patches/test/: Makefile  test-disk-activity.c
build-linux-amd64/: build-in-container.sh  fujisan-1.0.0-linux-x64.tar.gz.sha256  fujisan_1.0.0_amd64.deb.sha256
cmake/: test_sdl2_target.cpp
data/: autorun.atr  fnconfig-fujisan.ini
docker/: Dockerfile.ubuntu  Dockerfile.ubuntu-22.04  Dockerfile.ubuntu-24.04  Dockerfile.ubuntu-build  test-linux-build.sh
docs/: FASTBASIC_VSCODE_DEBUGGER.md  FUJINET_DRIVE_UI_INTEGRATION.md  FUJINET_PC_CODE_REFERENCE.md  FUJINET_PC_TECHNICAL_ANALYSIS.md  KEYBOARD_SHORTCUTS.md  MEMORY_EXPANSION_TEST_PLAN.md  TCP_SERVER_API.md  TCP_SERVER_TEST_PLAN.md  TROUBLESHOOTING.md  mcp-server-vision.md
fujisan-patches/: 0004-partial-frame-execution.patch  0007-add-load-without-run.patch
images/: FujisanLogoIcon.pxd
images/pixelmator/: atari810closed.pxd  atari810emtpy.pxd  atari810off.pxd  atari810read.pxd  atari810write.pxd  cartrigeoff.pxd  fujisanlogo.pxd
include/: atariemulator.h  cartridgewidget.h  cassettewidget.h  configurationprofile.h  configurationprofilemanager.h  debuggerwidget.h  disasm6502.h  diskdrawerwidget.h  diskdrivewidget.h  emulatorwidget.h  fastbasicbuildpanel.h  fujinetbinarymanager.h  fujinetprocessmanager.h  fujinetservice.h  fujinetwidget.h  joystickswapwidget.h  macosfullscreen.h  mainwindow.h  mediaperipheralsdock.h  printerwidget.h  profileselectionwidget.h  sdl2audiobackend.h  sdl2joystickmanager.h  settingsdialog.h  tcpserver.h  toggleswitch.h  unifiedaudiobackend.h  version.h.in  volumeknob.h
patches/: .gitattributes  0001-libatari800-disk-api.patch  0002-windows-ulong-conflicts.patch  0003-disk-activity-callback-integration.patch  0003-single-instruction-stepping.patch  0004-partial-frame-execution.patch  0005-netsio-so-reuseaddr.patch  0006-add-xep80-to-libatari800.patch  0006-netsio-shutdown.patch  0007-netsio-binload-priority.patch  0008-binload-bulk-reads.patch  0009-replace-netsio-cold-with-warm-reset-in-coldstart.patch  0010-netsio-windows-support.patch  0011-netsio-write-size-fix.patch  0012-netsio-recv-byte-select-timeout.patch  0013-mozzwald-netsio-sync-and-hsio.patch  0013-netsio-sync-condition-variable.patch  0014-netsio-flush-fifo-and-win-recv-timeout.patch  0014-netsio-transfer-to-netsio-routing.patch  0015-netsio-recover-stale-sio-transaction.patch  0015-netsio-sync-wake-before-fifo-writes.patch  0016-netsio-pokey-hsio-full-speed-range.patch  0018-netsio-fujisan-quit-unblock.patch  CHANGES.md  PATCH_COMPATIBILITY.md  README-NetSIO-FujiNet-Support.md  README.md  apply-patches.sh  disable-80column.patch  enable-80column-libatari800.patch  enable-xep80-libatari800.patch  force-xep80-configure.sh  force-xep80-fat.sh  libatari800-api-disk-functions.patch  libatari800-disk-api.patch  libatari800-header-disk-api.patch  netsio-local-disk-priority.patch  netsio-sio-header.patch  netsio-sio-integration.patch  patch-libatari800-inline.sh  (+4 more)
scripts/: README-macos-build.md  advanced-cert-debug.sh  build-libatari800-autotools.sh  build-libatari800-fujinet.sh  build-linux-container.sh  build-linux-docker.sh  build-linux-local.sh  build-macos-release.sh  build-macos-separate-dmgs.sh  build-universal-macos-complete.sh  build-universal-macos.sh  build-windows-cross.sh  build-windows-simple.sh  configure-atari800.bat  configure-atari800.sh  create-icns.sh  create-ico.sh  create-minimal-makefile.sh  debug-certificates.sh  download-fastbasic.sh  download-fujinet-pc.sh  entitlements.plist  fujisan.entitlements  install-fujisan-fnconfig.sh  macos-config.sh  sign-and-notarize-dmgs.sh  sign-macos-apps.sh
scripts/archived/: build-and-sign-macos.sh  build-dual-arch-macos.sh  build-libatari800-simple.sh  build-universal-macos-fixed.sh  dmg-helper.sh  fix-dmg-creation.sh  sign-app-bundle.sh  test-codesign.sh
scripts/archived/build-steps/: create-dmg.sh  (+1 more)
scripts/build-steps/: notarize-app.sh  sign-app.sh
src/: atariemulator.cpp  cartridgewidget.cpp  cassettewidget.cpp  configurationprofile.cpp  configurationprofilemanager.cpp  debuggerwidget.cpp  disasm6502.cpp  diskdrawerwidget.cpp  diskdrivewidget.cpp  emulatorwidget.cpp  fastbasicbuildpanel.cpp  fujinetbinarymanager.cpp  fujinetprocessmanager.cpp  fujinetservice.cpp  fujinetwidget.cpp  joystickswapwidget.cpp  macosfullscreen.mm  macosfullscreen_stub.cpp  main.cpp  mainwindow.cpp  mediaperipheralsdock.cpp  printerwidget.cpp  profileselectionwidget.cpp  sdl2audiobackend.cpp  sdl2joystickmanager.cpp  settingsdialog.cpp  tcpserver.cpp  toggleswitch.cpp  unifiedaudiobackend.cpp  volumeknob.cpp  windows_compat.h
tests/: CMakeLists.txt  test_artifacts.sh  test_audio.cpp  test_character_injection.cpp  test_fujinet_process.cpp  test_fujinet_service.cpp  test_fujinet_widget.cpp  test_profiles.cpp  test_rom_loading.cpp  test_settings.cpp  test_tcp_commands.cpp
tests/fixtures/: dummy.car  dummy.xex  sample_fnconfig.ini  sample_profile.json
windows-release/: README.txt
